# libpay

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  README  README.md  TODO  configure.ac  libemv-config-format.ods
doc/: Doxyfile  Makefile.am  libemv-config-format.ods  manual-header.tex
etc/libemv/: emv-tags.json  log4crc
include/: Makefile.am  emv.h  tlv.h
include/libpay/: Makefile.am  emv.h  test.h  tlv.h
m4/: ax_valgrind_check.m4
scripts/: checkstyle.pl
src/: Makefile.am
src/emvtxn/: emvtxn.c
src/include/: Makefile.am  libemv_core.h  libpay_core.h
src/libemv/: Makefile.am  emv_ep.c  emv_tag.c  libemv.exports  libemv.pc.in
src/libtlv/: Makefile.am  libtlv.exports  libtlv.pc.in  tlv.c
src/ted/: Makefile.am  http.c  jsonrpc.c  ted.c  ted.h  ted_args.c  tlv_json.c
src/ted/www/: index.html
src/ted/www/js/: tlv.js
src/tests/: Makefile.am  emv_ep_termsetting.c  emv_ep_test.c  tlv_test.c
src/tests/emv_ep_wrapper/: Makefile.am  emv_ep_wrapper.c  libemv_ep_wrapper.exports
src/tests/emvco_ep_ta/: Makefile.am  chk.c  emvco_ep_ta.c  emvco_ep_ta.h  emvco_ep_ta.sh  emvco_ep_ta.sh.in  emvco_ep_ta_termsettings.c  log4crc  lower_tester.c  lt.c  term.c  tk.c
src/tests/libtlv_test/: Makefile.am  libtlv_test.c  log4crc
src/tlvdump/: Makefile.am  log4crc  tlvdump.c
src/tlvdump/examples/: 2PAY.SYS.DDF01  2PAY.SYS.DDF01.JOKER_MASTERCARD  GENERATE_AC_RESPONSE  GET_PROCESSING_OPTIONS_RESPONSE  READ_RECORD_RESPONSE
